Add support for XOAUTH2 client authentication.  Credit goes to David Hedberg for this implementation.

--- a/src/osdep/unix/Makefile
+++ b/src/osdep/unix/Makefile
@@ -137,7 +137,7 @@ RANLIB=ranlib
 
 # Standard distribution build parameters
 
-DEFAULTAUTHENTICATORS=ext md5 pla log
+DEFAULTAUTHENTICATORS=ext md5 pla log oa2
 #
 # mh needs to be after any other directory format drivers (such as mx or mix)
 # since otherwise mh will seize any directory that is under the mh path.
@@ -924,7 +924,7 @@ OSDEPS= mail.h misc.h env.h fs.h ftl.h nl.h tcp.h \
 	gethstid.c getspnam.c \
 	gr_wait.c gr_wait4.c gr_waitp.c \
 	kerb_mit.c \
-	auth_ext.c auth_gss.c auth_log.c auth_md5.c auth_pla.c \
+	auth_ext.c auth_gss.c auth_log.c auth_md5.c auth_pla.c auth_oa2.c \
 	pmatch.c scandir.c setpgrp.c strerror.c truncate.c write.c \
 	memmove.c memmove2.c memset.c \
 	tz_bsd.c tz_nul.c tz_sv4.c \
